#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-02
2016-09-27 Mikhail S. Dubrovin
- DCMethods, DCRange - fix saving/retrieving default version, add comment to delete_version

Tag: V00-03-01
2016-09-26 Mikhail S. Dubrovin
- add/update DC*.py - the 1st full scale working version
	
Tag: V00-02-89
2016-09-08 Mikhail S. Dubrovin
- change epix100a default common mode parameters from (4,6,30,10) to (4,7,30,10)

Tag: V00-02-88
2016-08-25 Mikhail S. Dubrovin
- first version of the Detector Calibration (DC) project core

Tag: V00-02-87
2016-08-18 Mikhail S. Dubrovin
- add DC*.py modules for Detector Calibration (DC) project

Tag: V00-02-86
2016-08-05 Mikhail S. Dubrovin
- Change epix100 wide pixel size from 200um to 175um (PSAS-148)
M       src/SegGeometryEpix100V1.cpp
M       src/SegGeometryEpix100V1.py

Tag: V00-02-85
2016-07-21 Mikhail S. Dubrovin
- CalibFileFinder.py - add methods deploy_calib_file(...), deploy_calib_array(...) and self-tests PSAS-148

Tag: V00-02-84
2016-07-20 Mikhail S. Dubrovin
- fix problem with propagation of the default pix_scale_size
M       include/SegGeometryMatrixV1.h
M       include/SegGeometryStore.h
M       src/SegGeometryMatrixV1.cpp

Tag: V00-02-83
2016-07-19 Mikhail S. Dubrovin
- add support for matrix-like geometry segments with name like MTRX:512:512:54:54
M       src/SegGeometryMatrixV1.cpp
M       include/SegGeometryMatrixV1.h
M       include/SegGeometryStore.h

Tag: V00-02-82
2016-07-18 Mikhail S. Dubrovin
- GeometryAccess.py - update documentation for skipped methods.

Tag: V00-02-81
2016-07-11 Mikhail S. Dubrovin